added script description and code comments

--- a/messaging/mosquitto.conf
+++ b/messaging/mosquitto.conf
@@ -1,6 +1,16 @@
+# -----------------
+# 
+# This configuration sets up two MQTT listeners for the Mosquitto broker, 
+# specifying different ports and settings for each. 
+# 
+# -----------------
+
+# default port for MQTT
 listener 1883
 protocol mqtt
 
+
+# port to allow anonymous connections
 listener 1884
 protocol mqtt
 allow_anonymous true
